--- a/Shopify/ClientApp/package.json
+++ b/Shopify/ClientApp/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-router": "^5.1.7",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
+    "material-table": "^1.57.2",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
@@ -18,7 +21,8 @@
     "react-scripts": "^3.4.0",
     "react-scripts-ts": "^3.1.0",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
