--- a/Shopify/ClientApp/package.json
+++ b/Shopify/ClientApp/package.json
@@ -9,6 +9,8 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/reactstrap": "^8.4.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "material-table": "^1.57.2",
